ex6/testdata/typechecker/error/CyclicInheritance-err.java
class CyclicInheritance {
	public static void main(String[] a){
    }
}

class A extends B{
    
}

class B extends A{ //TE

}
